# LLM-System-Requirements

./: LICENSE  README.md  app.py  models.py  pyproject.toml  utils.py
.devcontainer/: devcontainer.json
llm_tools/: Home.py
llm_tools/config/: memory_config.py
llm_tools/models/: Meta-Llama-3-70B-Instruct.json  Meta-Llama-3-8B-Instruct.json  Meta-Llama-3-8B.json  Phi-3-mini-4k-instruct.json  Qwen2-72B-Instruct.json
llm_tools/pages/: 1_Memory.py  2_Costs.py
llm_tools/utils/: memory_utils.py
models/: Mistral-7B-Instruct-v0.3.json  Mixtral-8x7B-Instruct-v0.1.json  phi-2.json
